# hc-shared-todo-feed

./: .gitignore  .hc  DESIGN.md  README.md
client/: .eslintrc.js  .gitignore  index.html  jest.config.Js  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/coverage/: clover.xml  coverage-final.json  lcov.info
client/coverage/lcov-report/: index.html  index.tsx.html  reducer.ts.html
client/coverage/lcov-report/app/: index.html  store.ts.html  utils.ts.html
client/coverage/lcov-report/services/: index.html  zomeApis.ts.html
client/src/: App.spec.tsx  App.tsx  hcWebSockets.ts  main.tsx  setupTests.ts
client/src/app/: constants.ts  hooks.ts  store.ts  types.ts  utils.ts
client/src/components/List/: index.tsx
client/src/features/cell/: actions.ts  reducer.ts  (+1 more)
client/src/services/: hcWebSockets.ts  redux-middleware.ts  reduxMiddleware.ts  restApis.ts  zomeApis.ts
client/src/styles/: styles.css
holo-layer/: .gitignore  Cargo.toml  start.sh
holo-layer/tests/: package-lock.json  package.json  tsconfig.json
holo-layer/tests/src/: am_i_developer.ts  common.ts  index.ts  todo_entry.ts  who_am_i.ts
holo-layer/workdir/dna/: dna.yaml  hInstagram.dna  redDot.dna
holo-layer/workdir/happ/: hInstagram.happ  happ.yaml  redDot.happ
holo-layer/zomes/instafeed/: Cargo.toml
holo-layer/zomes/instafeed/src/: lib.rs
holo-layer/zomes/instafeed/src/entries/: todo.rs
holo-layer/zomes/instafeed/src/entries/todo/: anchors.rs  validation.rs
holo-layer/zomes/instafeed/src/helpers/: progenitor.rs
holo-layer/zomes/profiles/: Cargo.toml
(+54 files in other folders)
