[package]
name = "instafeed"
version = "0.1.0"
authors = ["Nick Stebb <n.stebbings@gmail.com>"]
edition = "2018"

[lib]
name = "instafeed"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk_crud = { version = "0.4.0"}
holo_hash = { version = "0.0.8", features = ["encoding"] }
serde = "1"
serde_json = "1.0.64"
hdk = "0.0.109"
chrono = "0.4.19"
paste = "1.0.5"
thiserror = "1"

